<resources>
    <string name="app_name">Music Player App</string>
    <string name="library">Library</string>
    <string name="store">Store</string>
    <string name="description_of_payment_api_and_how_to_use_it">To implement the Payment Activity, you first need to modify your Manifest to enable the Android Pay API. You then need to reference a Constants Class to use constant values in the app. Use a isReadyToPay method to see if the use has the android pay app installed. You then need to establish what kind of Payment Token you wish to receive and make the parameters. Use a MaskedWallet Request to get the billing information of the User. Estimate tax. Add a purchase button with WalletFragment class. Request and Retrieve the Full Wallet. Continue through the typical purchase flow to the receipt. A couple resources you can use are the MediaPlayer Class which is the primary API for playing sound and video. and the AudioManager class which is responsible for managing audio sources and audio output on a device.  </string>
    <string name="purpose_of_now_playing_activity">the user should be able to see the song\'s information with cover art and be able to control the song using the buttons and seek bar below. There is a Rewind, Stop, Play, and Forward button at the bottom of the screen.</string>
    <string name="description_of_home_page">This Homepage has 2 buttons where the user is able to navigate to the Library or the Store. The bottom has a Now Playing Button that navigates to the Now Playing Activity.</string>
    <string name="home_page">Home Page</string>
    <string name="library_title">Library</string>
    <string name="library_description">This is the library. It shows 5 songs that the user can click on that will then navigate to the Now Playing activity. The song and Artist are displayed.The bottom has a Now Playing Button that navigates to the Now Playing Activity.</string>
    <string name="now_playing_title">Now Playing</string>
    <string name="store_description">This is the Music Store. It shows 5 songs that the user can click on that will navigate them to the Payment Activity. The song and Artist are displayed. The bottom has a Now Playing Button that navigates to the Now Playing Activity.</string>
</resources>
