<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayerapp.PaymentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Payment Activity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/description_of_payment_api_and_how_to_use_it" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_to_library_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:scaleType="fitStart"
            android:src="@drawable/geometric_one"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:layout_marginBottom="34dp"
            android:layout_alignRight="@+id/back_to_library_button"
            android:layout_alignBottom="@+id/back_to_library_button"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <ImageButton
            android:id="@+id/back_to_store_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:scaleType="fitEnd"
            android:src="@drawable/geometric_two"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store"
            android:layout_marginBottom="34dp"
            android:layout_alignLeft="@+id/back_to_store_button"
            android:layout_alignBottom="@+id/back_to_library_button"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textSize="15sp"/>


    </RelativeLayout>


</LinearLayout>
